--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -11,12 +11,14 @@
   padding: 0;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   overscroll-behavior: touch;
+  overflow: hidden;
 }
 
 html {
   position: relative;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -30,12 +32,14 @@ body {
   font-size: var(--font-size);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
-#__next {
+#root {
   position: relative;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 img,
